--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
 <body>
     <div class="about-me">
         <div class="about-me-text">
-          <h2>About</h2>
-          <p>I am a Computer Applications student and I love to create websites.My interests include playing video games,sports,listening to music,etc.Sports and music have defined my life path and experiences.I know programming languages such as C,Java,Php,etc.I also have the basic understanding of Sql.I always have the urge to learn new things and technologies.I have attended some workshops based on Machine Learning as well as DevOps.I have also completed a course on .NET and is currently doing a course on Android developent.</p>
+          <h2 class="about">About</h2>
+          <p>I am a Computer Applications student,currrently pursuing my masters in MACFAST College,Tiruvalla and I love to create websites.My interests include playing video games,sports,listening to music,etc.Sports and music have defined my life path and experiences.I know programming languages such as C,Java,Php,etc.I also have the basic understanding of Sql.I always have the urge to learn new things and technologies.I have attended some workshops based on Machine Learning as well as DevOps.I have also completed a course on .NET and is currently doing a course on Android developent.</p>
         </div>
         <img src="./images/g2.jpg" alt="" width="300" height="350">
       </div>
