--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,9 @@
     <textarea name="message" type="text" id="input-message" placeholder="Message"></textarea>
   </div>  
   <input type="submit" value="Submit" id="input-submit">
+  <div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3936.5465587645863!2d76.58249181470659!3d9.373332193282458!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b06247260536859%3A0x47b80c2e1ce414bd!2sMACFAST%20%7C%20Tiruvalla!5e0!3m2!1sen!2sin!4v1676347566584!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
 </form>
 </body>
 </html>
